syntax = "proto3";
package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";

service Sports {

  // GetSports will return the sport base on input ID
  rpc GetSports(GetSportsRequest) returns (GetSportsResponse){}

  //AddSport will return success if added
  rpc AddSport(AddSportRequest) returns (AddSportResponse){}
}

/* Requests/Responses */

// Request for get sport by ID
message GetSportsRequest {
  repeated int64 id = 1;
}

// Response for get sport call
message GetSportsResponse {
  repeated Sport sport = 1;
}

// Request for add sport
message AddSportRequest{
  Sport sport = 1;
}

// Response for add sport
message AddSportResponse{
  string result = 1;
}

/* Resources */

// A sport resource.
message Sport {
  // ID represents a unique identifier for the sport.
  int64 id = 1;
  // Name is the official name given to the sport.
  string name = 2;
  // AdvertisedStartTime is the time the sport is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 3;
}